<resources>
    <string name="app_name">MobileManager</string>
    <string name="click_optimization">click optimization</string>
    <string name="clean_rubbish">clean rubbish</string>
    <string name="save_electricity">save electricity</string>
    <string name="rights_manager">rights manager</string>
    <string name="traffic_monitoring">traffic monitoring</string>
    <string name="complete">complete</string>
    <string name="optimization_complete">optimization complete</string>
    <string name="rubbish">rubbish</string>
    <string name="month_rest">month rest</string>
    <string name="today_has_been_used">today has been used :</string>
    <string name="optimization">optimization</string>
    <string name="on_examination">on examination</string>
    <string name="in_the_optimization">in the optimization</string>
    <string name="click_return">click_return</string>
    <string name="intelligent_power_saving">intelligent power saving</string>
    <string name="touch_cleaner">touch cleaner</string>
    <string name="clean_ram">clean ram</string>
    <string name="examination_complete">examination complete</string>
    <string name="app_manager">app manager</string>
    <string name="home_return">return</string>
    <string name="check_all">check all</string>
    <string name="uninstall">uninstall</string>
    <string name="without_checked_app">without any checked app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Flow measurement unit -->
    <string name="traffic_b">b</string>
    <string name="traffic_kb">kb</string>
    <string name="traffic_mb">MB</string>
    <string name="traffic_gb">GB</string>
    <string name="traffic_tb">T</string>
</resources>