<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_traffic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rgk.mobilemanager.ui.activity.TrafficActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@color/primary_dark">
        <RelativeLayout
            android:id="@+id/rl_traffic_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clickable="true">
            <ImageView
                android:id="@+id/iv_traffic_pre"
                android:src="@mipmap/pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"/>
            <TextView
                android:id="@+id/tv_traffic_pre"
                android:layout_toRightOf="@id/iv_traffic_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingLeft="10dp"
                android:textColor="@color/whiteSmoke"
                android:text="@string/traffic_monitoring"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_traffic_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/tv_month_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_rest"
                android:textColor="@color/whiteSmoke"/>
            <TextView
                android:id="@+id/tv_rest_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.95"
                android:textColor="@android:color/white"
                android:textSize="60dp"
                android:layout_below="@id/tv_month_rest"/>
            <TextView
                android:id="@+id/tv_traffic_unit"
                android:layout_toRightOf="@id/tv_rest_num"
                android:paddingTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_gb"
                android:textColor="@color/whiteSmoke"/>
            <TextView
                android:id="@+id/tv_today_used"
                android:paddingTop="10dp"
                android:layout_below="@id/tv_rest_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteSmoke"
                android:text="@string/today_has_been_used"/>
            <TextView
                android:id="@+id/tv_today_used_num"
                android:layout_toRightOf="@id/tv_today_used"
                android:paddingTop="10dp"
                android:layout_below="@id/tv_rest_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="120"
                android:textColor="@color/whiteSmoke"/>
            <TextView
                android:id="@+id/tv_today_used_unit"
                android:layout_toRightOf="@id/tv_today_used_num"
                android:paddingTop="10dp"
                android:layout_below="@id/tv_rest_num"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteSmoke"
                android:text="@string/traffic_mb"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
