<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rgk.mobilemanager.ui.fragment.HomeFragment">

    <RelativeLayout
        android:id="@+id/rl_fragment_home"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@color/primary_dark"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/rl_fragment_home_opt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <ImageView
                android:id="@+id/iv_home_pre"
                android:src="@mipmap/pre"
                android:layout_alignParentLeft="true"
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/tv_home_pre"
                android:layout_toRightOf="@id/iv_home_pre"
                android:paddingLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optimization"
                android:textColor="@color/whiteSmoke"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/tv_home_count"
                android:layout_centerHorizontal="true"
                android:text="95"
                android:textSize="80dp"
                android:textColor="@color/whiteSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_opt"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_home_count"
                android:text="@string/click_optimization"
                android:textColor="@color/whiteSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/home_rubbish"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/tab_white_gray_selector"
                android:gravity="center">
                <ImageView
                    android:id="@+id/home_rubbish_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_centerHorizontal="true" />
                <TextView
                    android:id="@+id/tv_home_rubbish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/clean_rubbish"
                    android:layout_below="@id/home_rubbish_pic"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary_dark"/>

            <RelativeLayout
                android:id="@+id/home_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/tab_white_gray_selector"
                android:gravity="center">
                <ImageView
                    android:id="@+id/home_save_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tv_home_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/save_electricity"
                    android:layout_below="@id/home_save_pic"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_dark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/home_traffic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/tab_white_gray_selector"
                android:gravity="center">
                <ImageView
                    android:id="@+id/home_traffic_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tv_home_traffic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/traffic_monitoring"
                    android:layout_below="@id/home_traffic_pic"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/primary_dark"/>
            <RelativeLayout
                android:id="@+id/home_rights"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/tab_white_gray_selector"
                android:gravity="center">
                <ImageView
                    android:id="@+id/home_rights_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_camera"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tv_home_rights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/rights_manager"
                    android:layout_below="@id/home_rights_pic"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
